--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
+  color: white;
+}
+
+:root {
+  --main-background: #111827;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 body,
@@ -12,10 +22,17 @@ html {
 }
 
 body {
+  background: var(--main-background);
   width: 100%;
-  background-size: contain;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  text-align: center;
 }
