--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,11 +5,6 @@
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
-  color: white;
-}
-
-:root {
-  --main-background: #111827;
 }
 
 ::-webkit-scrollbar {
@@ -21,13 +16,18 @@ html {
   min-height: 100vh;
 }
 
+#root {
+  width: 100%;
+}
+
 body {
-  background: var(--main-background);
+  background: #111827;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
+  color: white;
 }
 
 button {
