--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
   font-family: "Inter", sans-serif;
 }
 
@@ -30,9 +32,8 @@ body {
   color: white;
 }
 
-button {
-  outline: none;
-  border: none;
-  cursor: pointer;
-  text-align: center;
+@layer base {
+  button {
+    @apply cursor-pointer border-none text-center focus:outline-none;
+  }
 }
