--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@custom-variant dark (&:is(.dark *));
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -136,5 +138,14 @@ body {
 @layer base {
   button {
     @apply cursor-pointer p-5 text-center focus:outline-none;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
