--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,6 +135,40 @@ body {
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 15px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  animation: l5 1s infinite linear alternate;
+}
+@keyframes l5 {
+  0% {
+    box-shadow:
+      20px 0 #000,
+      -20px 0 #ff6467;
+    background: #000;
+  }
+  33% {
+    box-shadow:
+      20px 0 #000,
+      -20px 0 #0002;
+    background: #05df72;
+  }
+  66% {
+    box-shadow:
+      20px 0 #fdc700,
+      -20px 0 #000;
+    background: #0002;
+  }
+  100% {
+    box-shadow:
+      20px 0 #0002,
+      -20px 0 #000;
+    background: #000;
+  }
+}
+
 @layer base {
   button {
     @apply cursor-pointer p-5 text-center focus:outline-none;
