--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:is(.dark *));
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -28,7 +26,7 @@ body {
   color: white;
 }
 
-@theme inline {
+@theme {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
