--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: "jetbrains-mono";
-  src: url("../public/jet-brains-mono/JetBrainsMono-VariableFont_wght.ttf") format("truetype");
+  src: url("/jet-brains-mono/JetBrainsMono-VariableFont_wght.ttf") format("truetype");
 }
 
 * {
